less/bootstrap-theme/navbar.less
//
// Navbar
// --------------------------------------------------

.navbar {
    height: @navbar-height;

    &.navbar-fixed-top {
        .transition(transform .2s ease);
    }

    > .container,
    > .container-fluid {
        position: relative;
    }
}

.navbar-brand {
    width: @navbar-brand-width;
    line-height: @navbar-brand-line-height;
    padding-top: @navbar-brand-vertical-padding;
    padding-bottom: @navbar-brand-vertical-padding;

    span,
    a {
        font-size: @navbar-brand-font-size;
    }

    .navbar-brand-logo,
    .navbar-brand-badge {
        height: @navbar-brand-img-height;
    }

    .navbar-brand-badge {
        display: none;
        width: @navbar-brand-img-height;
    }

    .navbar-brand-logo {
        width: @navbar-brand-logo-width;
    }
}

.navbar-toggle {
    font-size: @navbar-default-toggle-font-size;
    padding: @navbar-default-toggle-padding;
    margin-top: @navbar-default-toggle-margin-top;
    margin-bottom: @navbar-default-toggle-margin-bottom;
}

.btn-navbar {
    width: @btn-navbar-height + 2;
    height: @btn-navbar-height + 2;
    min-width: inherit;
    border: none;
    margin: @btn-navbar-margin-top @btn-navbar-margin-horizontal @btn-navbar-margin-bottom @btn-navbar-margin-horizontal;
    padding: @btn-padding-vertical 0;
    background-color: transparent;
    vertical-align: top;
    .border-top-radius(50%);
    .border-bottom-radius(50%);

    &:active,
    &.active,
    .open > .dropdown-toggle& {
        .box-shadow(none);
    }
}

.btn-navbar-home {
    &:empty {
        width: @btn-navbar-height + 2;
        height: @btn-navbar-height + 2;
        margin: @btn-navbar-margin-top @btn-navbar-margin-horizontal @btn-navbar-margin-bottom @btn-navbar-margin-horizontal;
        padding: @btn-padding-vertical 0;
        vertical-align: top;
        display: none;

        &.force {
            display: inherit;
        }
    }

    &:not(:empty) + .btn-navbar-home {
        display: none;
    }
}

.fa-navbar-toggle:before {
    content: @navbar-default-toggle-fa-icon;
}

.navbar-title {
    float: left;
    padding: @navbar-padding-vertical @navbar-padding-horizontal;
    font-size: @font-size-large;
    line-height: @line-height-computed;
    height: @navbar-height;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.navbar-flex {
    width: 100%;
    height: @navbar-height;
    .flexbox();

    > * {
        float: none;
    }

    .navbar-title {
        .flex(1);
    }

    .navbar-brand {
        padding-left: 0;
        padding-right: 0;

        img {
            position: relative;
        }
    }

    .navbar-title {
        white-space: normal;
        padding: 0 @navbar-padding-horizontal;
        line-height: @navbar-height;


    }
}

.navbar-default {
    &.navbar-fixed-top,
    &.navbar-static-top {
        &.affix {
            .box-shadow(@navbar-shadow-default);
        }
    }

    .navbar-nav > .active > a {
        .box-shadow(inset 0 5px 0px @navbar-default-link-active-shadow-color);
    }
}

.navbar-inverse {
    &.navbar-fixed-top,
    &.navbar-static-top {
        &.affix {
            .box-shadow(@navbar-shadow-inverse);
        }
    }

    .navbar-nav > .active > a {
        .box-shadow(inset 0 5px 0px @navbar-inverse-link-active-shadow-color);
    }

    .navbar-toggle {
        &:hover,
        &:focus,
        &:active {
            .box-shadow(none);
        }
    }
}

// Navbar headroom
// --------------------------------------------------

.navbar {
    height: @navbar-height;

    &.headroom {
        .transition(0.2s ease);
        .transition-delay(0.2s);
    }

    &.headroom--pinned {
        .transform(translateY(0%));
    }

    &.headroom--unpinned,
    body.table-pager-affixed & {
        .transform(translateY(-100%));
        .box-shadow(~"none !important");
    }
}

// Navbar Affix Tall
// --------------------------------------------------

.navbar {
    &.navbar-tall,
    &.navbar-tall-medium,
    &.navbar-tall-large {
        .navbar-tall-fab-wrapper {
            position: absolute;
            right: 10%;
            top: 100%;
            margin-top: -30px;
        }

        .navbar-title-tall {
            .transition(font 0.2s ease);
            font-size: @font-size-h3;
        }
    }
}


// Navbar Responsive
// --------------------------------------------------
@media (max-width: @grid-float-breakpoint-max) {
    .navbar-brand {
        width: auto;

        &.navbar-brand-switch {
            img.navbar-brand-logo {
                display: none;
            }

            img.navbar-brand-badge {
                display: inherit;
            }
        }
    }

    .navbar-fixed-top {
        &.affix-top {
            > .navbar-collapse {
                .box-shadow(@shadow-z-1);
            }
        }
    }

    .navbar-collapse {
        .dropdown-header {
            padding-top: 5px;
            padding-bottom: 5px;
        }

        .dropdown-menu {
            > li.dropdown {
                > a:after {
                    display: none;
                }
        
                > a > .caret {
                    display: inline-block;
                }
            }

            &.dropdown-menu-left,
            &.dropdown-menu-right {
                float: none !important;
            }

            > li > a,
            li > a,
            .dropdown-header {
                font-size: @font-size-base;
            }
        }

        .dropdown-menu,
        .open .dropdown-menu {
            padding-left: 15px;

            > li > a,
            li > a,
            .dropdown-header {
                padding-left: 15px;
            }
        }

        .open .dropdown-menu,
        .dropdown-menu {
            display: block;
            width: 100%;
            position: relative;
            float: none;
            margin-top: 0;
            border: 0;
            box-shadow: none;

            > li > a {
                line-height: @line-height-computed;

                &:hover,
                &:focus {
                    background-image: none;
                }
            }

            .dropdown-menu {
                display: block;
            }
        }

        .col-menu-2 {
            min-width: inherit;
        }

        .navbar-brand {
            width: auto;
        }
    }

    .navbar-inverse.navbar-fixed-top {
        &.affix-top {
            > .navbar-collapse {
                .box-shadow(@shadow-z-1);
            }
        }
    }
}

@media (min-width: @screen-sm-min) {
    .navbar-header {
        width: 100%;
    }

    .btn-sidebar-toggle,
    .btn-group.btn-sidebar-toggle .btn {
        display: inline-block;
    }

    .btn-navbar-home,
    .btn-navbar-home + .btn-sidebar-toggle.pull-right {
        + .navbar-brand,
        + div .navbar-brand {
            width: auto;
        }
    }

    .btn-navbar-home,
    .btn-navbar-home + .btn-sidebar-toggle {
        + .navbar-brand,
        + div .navbar-brand {
            margin-left: 0;
        }
    }
}

@media (min-width: @screen-md-min) {
    .navbar {
        &.navbar-sidebar-locked-left,
        &.navbar-sidebar-full-locked-left {
            .btn-sidebar-toggle {
                display: none;
            }

            .navbar-brand {
                width: @navbar-brand-width;
            }
        }

        &.navbar-sidebar-full-locked-left {
            &.navbar-fixed-top {
                padding-left: @navbar-brand-width;
            }

            .navbar-brand {
                width: auto;
            }
        }

        .btn-navbar-home:empty {
            display: inherit;
        }

        .btn-navbar-home + .navbar-title {
            padding-left: 0;
        }
    }
}

@media (orientation: landscape) {
    .navbar-collapse {
        max-height: 230px;
    }
}

